--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,7 @@ p{
 }
 /* ! nav end */
 
-.dropdown__custom,.hero__section{
+.dropdown__custom,.hero__section,.about{
     background-color: var(--lightBg);
 }
 .hero__content{
@@ -168,4 +168,25 @@ p{
 .top__brand img:hover{
     transform: scale(1, 1.1);
     transition: transform  linear 300ms;
+}
+
+/* ! Top Brands End */
+.about{
+    min-height: 400px;
+}
+.about__nav a{
+    color: #000;
+    font-size: 21px;
+    margin: 10px 20px !important;
+    padding: 15px !important ;
+    box-shadow:  7px 7px 14px #95938c,
+             -7px -7px 14px #f9f5ea;
+    border-radius: 10px;
+}
+.notice{
+    height: 100%;
+}
+.notice__img{
+    width: 100%;
+    height: 100%;
 }
