--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,7 @@ p{
 }
 /* ! nav end */
 
-.dropdown__custom,.hero__section,.about{
+.dropdown__custom,.hero__section{
     background-color: var(--lightBg);
 }
 .hero__content{
@@ -145,6 +145,7 @@ p{
 }
 .massage .btn__massage{
     padding: 10px;
+    box-shadow:  none
 }
 .massage svg{
     font-size: 30px;
@@ -180,15 +181,19 @@ p{
 }
 
 /* ! Top Brands End */
-.about{
+.about,footer{
     min-height: 400px;
+    background: rgb(250,128,76);
+background: linear-gradient(39deg, rgba(250,128,76,1) 0%, rgba(209,206,197,1) 100%);
 }
+
 .about__nav a{
     color: #000;
     font-size: 21px;
-    margin: 10px 20px !important;
-    padding: 15px !important ;
-    box-shadow:  0px -1px 5px #95938c, 1px -20px 0px #f9f5ea;
+    margin: 5px 20px !important;
+    padding: 5px !important ;
+    color: var(--primaryBg);
+    /* box-shadow:  0px -1px 5px #95938c, 1px -20px 0px #f9f5ea; */
     border-radius: 10px;
 }
 .notice{
@@ -198,8 +203,17 @@ p{
     width: 100%;
     height: 100%;
 }
-
+.contact__btn{
+    box-shadow:  28px 28px 55px #de9d7f,
+    -28px -28px 55px #f0ab89;
+}
 /* ! about end */
+footer{
+    min-height: 50px;
+}
+/* ! Footer end */
+
+
 /* !Signle product view */
 #product__single__page{
     width: 100%;
@@ -257,6 +271,12 @@ p{
     .about__row{
         flex-direction: column-reverse;
         padding: 25px 0;
+    }
+    .contact {
+        width: 100% !important;
+    }
+    .info{
+        justify-content: space-evenly;
     }
     .notice__img{
         height: auto;
