--- a/style/style.css
+++ b/style/style.css
@@ -218,6 +218,13 @@ footer{
 #product__single__page{
     width: 100%;
 }
+
+/* ! about us page */
+.about__us{
+    min-height: calc(100vh - 65px);
+    background: rgb(250,128,76);
+    background: linear-gradient(39deg, rgba(250,128,76,1) 0%, rgba(209,206,197,1) 100%);
+}
 /* ! responsive start */
 
 @media only screen and (max-width:1024px){
