nav BG remove in mobile device

--- a/style/style.css
+++ b/style/style.css
@@ -296,6 +296,9 @@ footer{
 
 
 @media only screen and (max-width: 425px){
+    .nav__custom{
+        background-image: none;
+    }
     .hero__content .content__title {
         font-size: 40px;
     }
