info upadte and last revision

--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@ Style Plugin -> Bootstrap
 font -> Bebas Neue
 
 thames name -> Punguin Fashion
-extra add -> Account option, cart option
+extra add -> Account option, cart option,single product page, about page, news letter, top brand, footer
 
 responsive -> chrome dev tool for screen measurement
 */
